--- a/source/_posts/指针数组与数组指针.md
+++ b/source/_posts/指针数组与数组指针.md
@@ -2,13 +2,15 @@
 title: 指针数组与数组指针【思维壁垒】
 date: 2024.12.12
 updated:
-tags: "计算机, 语言基础"
-categories: C/C++
-keywords: “指针数组, 数组指针"
+tags: 
+  - 语言基础
+  - C/C++
+categories: 计科
+keywords: 
 description:
-top_img:
+top_img: https://www.runoob.com/wp-content/uploads/2014/09/c-pointer.png
 comments:
-cover:
+cover: https://www.runoob.com/wp-content/uploads/2014/09/c-pointer.png
 toc:
 toc_number:
 toc_style_simple:
@@ -22,8 +24,8 @@ katex:
 aplayer:
 highlight_shrink:
 aside:
-swiper_index: 1
-top_group_index: 1
+swiper_index: 5
+top_group_index: 5
 background: "#fff"
 ---
 
