--- a/source/_posts/钱.md
+++ b/source/_posts/钱.md
@@ -3,12 +3,14 @@ title: “钱”
 date: 2024.7.6
 updated:
 tags:
-categories:
+  - 思维升级
+  - 碎碎念
+categories: 社科
 keywords:
 description:
-top_img:
+top_img: https://images.unsplash.com/photo-1515180711443-f8685c6d6a74?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 comments:
-cover:
+cover: https://images.unsplash.com/photo-1515180711443-f8685c6d6a74?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 toc:
 toc_number:
 toc_style_simple:
@@ -22,8 +24,8 @@ katex:
 aplayer:
 highlight_shrink:
 aside:
-swiper_index: 1
-top_group_index: 1
+swiper_index: 5
+top_group_index: 5
 background: "#fff"
 ---
 
@@ -74,5 +76,3 @@ _计划只是工具，为我们提供框架体系罢了。_
 想象一只老旧而笨重的箱子，箱子上磨损的把手只靠几根线勉强相连。金钱，就如同这个把手，是我们在物质世界中行走的重要工具。从表面上看，金钱似乎是我们获取一切所需的万能抓手，但实际上，它仅仅是一个便捷的媒介，一个连接我们与所需资源的桥梁。
 
 然而，我们往往过于关注这个把手——金钱本身，却忽视了箱子本身所代表的真正价值。这个箱子，其实是我们创造财富、实现目标的所有原料和资源的集合，它包括了我们的时间、知识、技能、经验以及努力。这些才是真正推动我们向前，实现自我价值和社会价值的关键。
-
-一篇逻辑不全的小文章
