--- a/source/_posts/lib/微观经济学/第1章-经济学十大原理.md
+++ b/source/_posts/lib/微观经济学/第1章-经济学十大原理.md
@@ -52,3 +52,70 @@ background: "#fff"
 
 **效率（efficiency）**是指社会能从其稀缺资源中得到最大的利益，**平等（equality）**是指将这些利益平均地分配给社会成员。提高效率就是在做大蛋糕，发扬平等就是在切好蛋糕。
 
+### 1.1.2 原理二：某种东西的成本是为了得到它所放弃的成本
+
+**机会成本（opportunity cost）**是为了得到这种东西所必须放弃的东西。
+
+### 1.1.3 原理三：理性人考虑边际量
+
+经济学家通常假设人是理性的。当可用的机会给定时，**理性人（rational people）**系统而有目的地尽最大努力去实现其目标。
+
+理性人知道，生活中的许多决策很少是黑与白之间的选择，而往往是介于其间的灰色地带。如吃饭时，决策往往不是“不吃，还是大吃特色”，而更可能是“是否再多吃一勺土豆泥”。经济学家用**边际效应（marginal change）**这个术语来描述对现有行动计划的微小增量调整。
+
+”边际“指”边缘“，因此边际变动是围绕你所做的事的边缘来进行调整。理性人通常通过比较边际收益（marginal benefit）与边际成本（marginal cost）来作决策。
+
+#### 案例一：是否该打电话
+
+已知：
+
+- 给朋友打电话10分钟带来的收益为7美元左右。
+- 手机的服务费为每月40美元的固定费和每分钟0.5美元的通话费用。且你通常打每月打电话100分钟，因此你每月费用为90美元。
+
+问，这种情况下你是否应该打电话？
+
+视角一：平均每分钟的电话费为$90/100=0.9$美元，因此10分钟的电话费为9美元，大于收益7美元，所以不打。
+
+视角二：虽然**平均成本**是9美元，但多打10分钟电话的**边际成本**是5美元，小于**边际收益**7美元，所以打。
+
+#### 案例二：如何决定对等退票的乘客收取多高的价格
+
+已知：
+
+- 一架有200个座位的飞机横越美国飞行一次的成本是10万美元——>每个座位的平均成本是 500 美元。
+- 设想起飞时仍有10个空位，而在登机口等退票的乘客愿意支付300美元买一张机票。
+
+问，航空公司是否应该把票卖给他？
+
+视角一：人们很容易得出结论：票价绝不应该低于500美元，所以不卖。
+
+视角二：虽然每位乘客飞行的**平均成本**是500美元，但**边际成本**仅仅是这位额外的乘客将消费的一罐软饮料的成本而已。只要等退票的乘客所支付的价格高于边际成本，那么卖给他机票就是有利可图的。
+
+而事实上，一个理性的航空公司往往会通过考虑**边际量**而设法增加利润。
+
+#### 案例三：为什么水便宜，而钻石如此昂贵？
+
+已知：
+
+- 人们需要水来维持生存，而钻石不是必需的。
+- 人们愿意为钻石支付的钱要远远多于水。
+
+原因：
+
+人们对物品的支付意愿基于增加一单位该物品所获得的边际效益，边际收益又取决于一个人已经拥有多少种物品。
+
+水的确是必不可少的，但增加一杯水的边际收益微不足道，因为水太多了。钻石呢，反之。
+
+###  1.1.4 原理四：人们会对激励做出反应
+
+**激励（incentive）**是引起一个人做出行动的某种东西。在经济学研究中，激励起着中心作用。一位经济学家甚至提出，整个经济学的内容可以简单概括为：“人们对激励做出反应。其余内容都是对此的解释”。
+
+在分析市场如何运行时，激励起到关键作用：当苹果价格上调，人们决定少吃苹果；同时，苹果园主决定雇用更多工人并多摘苹果。
+
+政府决策也和激励有关，许多政策改变了人们面临的成本或收益，从而改变了人们的行为。
+
+安全带法律的通过，直接影响是发生车祸的存活率的提高。同时，它也通过改变激励而影响了人们的行为，在这里，相关行为是司机开车的的速度和谨慎程度。这里，**边际成本**是时间和精力，从而实现缓慢而谨慎地开车；而**边际收益**则是驾车的安全性提高。
+
+可安全带减少了缓慢而谨慎地开车的收益（因为安全性的增量变少了），所以人们选择更快速、更不谨慎地开车。这样，这些法律减少了每次车祸的死亡人数，但是增加了车祸的次数——萨姆·佩兹曼的净结论是，司机死亡人数变动很小，行人死亡人数有所增加。
+
+## 1.2 人们如何相互影响
+
