--- a/source/_posts/硬件/51/【学习笔记】51单片机.md
+++ b/source/_posts/硬件/51/【学习笔记】51单片机.md
@@ -1,6 +1,6 @@
 ---
 title: 【学习笔记】51单片机
-date: 2025.12.23
+date: 2024.12.23
 updated:
 tags:
   - 51
@@ -36,7 +36,9 @@ background: "#fff"
 
 ### 第一阶段
 
-[[1-1]单片机及开发板介绍](D:\BaiduSyncdisk\GROUND\硬件\51\【51】单片机及开发板介绍.md)
+[[1]单片机及开发板介绍](https://untymen.com/2024/12/21/38b909be54f6/)
+
+[[2]LED](https://untymen.com/2024/12/22/31edb80dd274/)
 
 ### 第二阶段
 
