--- a/source/_posts/硬件/51/【51】单片机及开发板介绍.md
+++ b/source/_posts/硬件/51/【51】单片机及开发板介绍.md
@@ -28,9 +28,9 @@ top_group_index: 6
 background: "#fff"
 ---
 
-
-
 # 【51】单片机及开发板介绍
+
+> 总入口：
 
 单片机（Micro Controller Unit），简称MCU。内部集成了CPU、RAM、ROM、定时器、中断系统、通讯接口等一系列电脑的常用硬件功能。
 
@@ -116,7 +116,7 @@ ROM：8K（Flash）
 
 ### 单片机内部结构图
 
-![image-20241224234927273](【51】单片机及开发板介绍/image-20241224234927273.png)
+![image-20241224234927273](单片机及开发板介绍/image-20241224234927273.png)
 
 1. 贯穿始终的**总线（BUS）**
 
@@ -164,21 +164,18 @@ ROM：8K（Flash）
 
 ### 单片机管脚图
 
-![image-20241224234958505](【51】单片机及开发板介绍/image-20241224234958505.png)
+![image-20241224234958505](单片机及开发板介绍/image-20241224234958505.png)
 
 引脚8位一组，与工作位数相匹。
 
 ### 单片机最小应用系统
 
-![image-20241224235226861](【51】单片机及开发板介绍/image-20241224235226861.png)
+![image-20241224235226861](单片机及开发板介绍/image-20241224235226861.png)
 
-#### 1.电容滤波？
+#### 1.电容滤波
 
 电源可能有干扰，不稳定
 
-#### 2.晶振电路？
+#### 2.晶振电路
 
-#### 3.复位电路？
-
-## 开发板
-
+#### 3.复位电路
