--- a/source/_posts/硬件/51/【学习笔记】51单片机.md
+++ b/source/_posts/硬件/51/【学习笔记】51单片机.md
@@ -1,6 +1,6 @@
 ---
 title: 【学习笔记】51单片机
-date: 2024.12.23
+date: 2025.1.5
 updated:
 tags:
   - 51
@@ -23,22 +23,22 @@ katex:
 aplayer:
 highlight_shrink:
 aside:
-swiper_index: 6
-top_group_index: 6
+swiper_index: 2
+top_group_index: 2
 background: "#fff"
 ---
 
-
-
 # 【学习笔记】51单片机
+
+> 笔记基于江协科技系列课程，以及HC6800-ES开发板
 
 笔记列表
 
 ### 第一阶段
 
-[[1]单片机及开发板介绍](https://untymen.com/2024/12/21/1e5afeba2265/)
-
-[[2]LED](https://untymen.com/2024/12/22/ae5414f12151/)
+[[1]单片机及开发板介绍](D:\BaiduSyncdisk\GROUND\硬件\51\【51】单片机及开发板介绍.md)
 
 ### 第二阶段
+
+ [【51】LED.md](【51】LED.md) 
 
