--- a/source/_posts/lib/微观经济学/第1章-经济学十大原理.md
+++ b/source/_posts/lib/微观经济学/第1章-经济学十大原理.md
@@ -23,8 +23,8 @@ katex:
 aplayer:
 highlight_shrink:
 aside:
-swiper_index: 10
-top_group_index: 10
+swiper_index: 6
+top_group_index: 6
 background: "#fff"
 ---
 
@@ -59,6 +59,8 @@ background: "#fff"
 ### 1.1.3 原理三：理性人考虑边际量
 
 经济学家通常假设人是理性的。当可用的机会给定时，**理性人（rational people）**系统而有目的地尽最大努力去实现其目标。
+
+> “其”，说明这个目标指向个人目的，这渗透着西方的价值观。而在中文语境之下，人的理性建立在基础道德之上；比如，可能因为有国才有家的文化理念，妨碍公共利益的利己行为，会被我们认知为“非理性”。
 
 理性人知道，生活中的许多决策很少是黑与白之间的选择，而往往是介于其间的灰色地带。如吃饭时，决策往往不是“不吃，还是大吃特色”，而更可能是“是否再多吃一勺土豆泥”。经济学家用**边际效应（marginal change）**这个术语来描述对现有行动计划的微小增量调整。
 
@@ -291,8 +293,6 @@ background: "#fff"
     ![image-20241226223522282](第1章-经济学十大原理/image-20241226223522282.png)
 
     在图1-1中，W为货币⼯资变动率，U为社会的失业率，L为菲利普斯曲线。当失业率由U2降到U1时，货币⼯资变动率就由W2上升到W1。这表明失业率与货币⼯资变动率之间存在着⼀种交替关系。也就是说，要实现充分就业就必然会出现较⾼的物价上涨率。由于货币⼯资变动率与物价上涨率有关，⽽通货膨胀又⽤物价上涨率来表⽰。因⽽，进⼀步对此图引伸，便可⽤来表⽰通货膨胀率与失业率之间的关系。
-
-
 
 ### 问题与应用（部分）
 
