--- a/source/_posts/硬件/51/【学习笔记】51单片机.md
+++ b/source/_posts/硬件/51/【学习笔记】51单片机.md
@@ -36,9 +36,12 @@ background: "#fff"
 
 ### 第一阶段
 
-[[1]单片机及开发板介绍](D:\BaiduSyncdisk\GROUND\硬件\51\【51】单片机及开发板介绍.md)
+[【51】单片机及开发板介绍 | unTymen](https://untymen.com/2024/12/21/1e5afeba2265/)
 
 ### 第二阶段
 
- [【51】LED.md](【51】LED.md) 
+[【51】LED | unTymen](https://untymen.com/2024/12/22/ae5414f12151/)
 
+[【51】独立按键 | unTymen](https://untymen.com/2025/01/03/947b22607566/)
+
+[【51】数码管 | unTymen](https://untymen.com/2025/01/05/61f6f7279493/)
