--- a/source/_posts/周报/【25】12.30-1.5.md
+++ b/source/_posts/周报/【25】12.30-1.5.md
@@ -45,7 +45,7 @@ World Quant
 
 1. [Developer Roadmaps - roadmap.sh](https://roadmap.sh/)
 
-roadmap.sh 是一个社区努力，旨在创建路线图、指南和其他教育内容，以帮助指导开发者选择一条学习路径并引导他们的学习过程。
+roadmap.sh 是一个社区，旨在创建路线图、指南和其他教育内容，以帮助指导开发者选择一条学习路径并引导他们的学习过程。
 
 2. 来看看大家的24年终总结叭
 
@@ -119,9 +119,9 @@ roadmap.sh 是一个社区努力，旨在创建路线图、指南和其他教育
    - 赚钱
    - 自我投资
    - 股票
-   - 上级
+   - 商机
    - 买彩票
-   - 别把1美元不当回事
+   - 别不把1美元当回事
 5. 学会多多沟通 Communication
    - 学会和小学生沟通
    - 不论做什么职业，学会行话
