--- a/source/_posts/条条/梁文锋的60条思考.md
+++ b/source/_posts/条条/梁文锋的60条思考.md
@@ -5,7 +5,7 @@ updated:
 tags:
   - “创”
   - 输入
-categories: 杂
+categories: 条条
 ---
 
 梁文锋是一位兼具理想主义和创新精神的企业家。他从量化投资领域积累经验后，全身心投入人工智能大模型的研究探索，目标直指通用人工智能（AGI） ，这种对技术前沿的执着追求令人钦佩。在技术研发理念上，他坚信语言大模型是通往AGI的关键路径，为此专注基础研究，不急于开展应用开发。
