--- a/source/_posts/计算机基础课程.md
+++ b/source/_posts/计算机基础课程.md
@@ -38,3 +38,16 @@ categories: 计科
 课程体系的设定，应该更关注那些经得住时间考验的原则，而非追逐短暂的技术潮流。
 
 https://huntnewsnu.com/82511/editorial/op-eds/op-ed-northeasterns-redesign-of-the-khoury-curriculum-abandons-the-fundamentals-of-computer-science/
+
+
+
+> 你是否注意到基础知识层面的变化？我之前和一名大二的计算机科学（CS）学生交谈过，他竟然不知道如何对另一台主机进行 ping 操作。这不禁让我怀疑，如今的新学生选择计算机科学是不是因为它看起来很酷（而在我那个年代，我们这些选择计算机科学的人都是书呆子，生活中无时无刻不在钻研这个领域）。
+
+
+
+## 证
+
+## 软考
+
+有什么用：工作狗是为了扣税啥的。另外，部分城市的高级证书（学生能不能考高级需要查一下）可以评人才，会有租房买房的政府补贴。建议网上搜一下，很多培训机构打广告，可以看下所在城市的政策。
+
