--- a/source/_posts/可能性的艺术.md
+++ b/source/_posts/可能性的艺术.md
@@ -1,12 +1,12 @@
-## 概念
-
-- 政治【一级】
-  - 政治发展
-  - 政治体系
-  - 政治制度
-  - 民主政治
-  - 问责政治
-  - 
+---
+title: 可能性的艺术：比较政治学30讲
+date: 2025.7.18
+updated:
+tags:
+  - 输入
+  - 活
+categories: 社科
+---
 
 ## 《可能性的艺术：比较政治学30讲》
 
