--- a/source/_posts/技能训练/写作是门艺术-第一篇.md
+++ b/source/_posts/技能训练/写作是门艺术-第一篇.md
@@ -52,7 +52,7 @@ categories: 杂
 - 我借鉴了普林斯顿大学和清华大学写作课中的主题写作，用一个话题穿起分阶段的连贯写作：家。
 - 我建议你采取两个角度来锻炼写作：一个是本学科角度，一个是陌生角度。如果你学历史，我建议你从家庭演变的角度写一篇文章；此外，我建议你挑战一下自己，探索一个陌生角度。例如，你可以从建筑的角度写一篇家庭物质环境的文章。
 - 正如史蒂夫·马丁所言：“所有人生的谜语都可以从电影找到答案。”
-- ![image-20250802232013670](写作是门艺术/image-20250802232013670.png)
+- ![image-20250802232013670](写作是门艺术-第一篇/image-20250802232013670.png)
 
 
 
@@ -62,20 +62,23 @@ categories: 杂
 
  > 1.辩论。现在还需要写作吗？这是一个读图的时代、看视频的时代、注意力碎片化的年代，文字似乎已经失去了读者。有人认为，可视化才是最应该学习的技能（所谓的“视觉素养”）。
 
-```
 显然是需要的。“写作似乎已经失去了读者”，是在指大家以往通过文字获得启发、慰藉、情绪价值等体验，现在可由其他载体更好的或者说更有意思的载体实现，因此大家本给文字的注意力逐渐转移到了其他事物上。可是，文字具有根本的不可替代性，所以任何读者总会在某一特定场地需要且唯一需要文字，诸如科研工作者需要借助论文来精确地交流学术思想，法律专业人士依赖严谨的合同文本来界定权责……可视化固然当前时代下值得推崇的手段，可我们有理由相信，写作和文字才是表达的根本，或许更准确的说法是，许多复杂的视觉叙事仍需文字作为锚点来避免歧义，而文字的深度和精确性使其在某些表达上具有独立优势。
-```
+
+---
+
+Absolutely needed! "Writing seems to have lost its readers", which means while people enjoyed the experience of inspiration, solace and emotional value through sentences, today it can be achieved by other more engaging and more entertaining **mediums**. So, our attention,belonging to words previously, is gradually diverted to other things. However, text serves as something indispensable, so everyone in some specific situations would **exclusively require** texts, from researchers relying on essays to communicate academic ideas precisely to legal professionals depending on **rigorous contracts** to **define rights and responsibilities**. While it is true that visualization is **praiseworthy** in this era, it is reasonable to argue that writing and text are the foundation of expression. **A more accurate way to put it is many complex visual narratives need text as an anchor to avoid ambiguity**, while the depth and precision of text endow it with superior and independent advantage in some for certain **types of communication**. 
+
+
 
  > 2.辩论。理科生需要学写作吗？术业有专攻，理科生能解出方程、写出代码、算出系数、做出实验不就可以了吗？你怎么看？
 
-```
 写作是理科生精准表达、传播和交流想法的必备工具。值得注意的是，这里的写作的概念：一份结构清晰的实验报告、撰写一份逻辑严密的专利申请、或者注释一段可读性极高的代码，这些才是他们世界里的“写作”。这种写作的核心是逻辑、结构和清晰度，而非文采、修辞和情感共鸣。所以，他们需要学的不是“大写作”，而是“技术沟通”这门手艺。
-```
+
+
 
  > 3.短篇写作。解释事物运作机理，可以是一个APP，一种游戏，一项运动，一件乐器，一种机械，一样饭菜……把事情讲清楚，说起来容易但其实是极难练就却极端重要的能力。要求：(1)条理清晰，能让人看完就明白；(2)吸引读者，能让不感兴趣的人产生兴趣。
 
-```
-// Version 1
+**——Version 1——**
 讲讲AI中的MCP——模型上下文协议（Model Context Protocol）。
 在我们使用AI过程中，要是想让其帮我们分析Excel表格中的学生成绩，AI模型就会利用这套协议对Excel发挥指令，Excel也会返回相关结果给AI。在这个过程中，Excel是相对于AI的外部工具，MCP协议让AI与Excel交流成为可能。
 总之，为了让这份协议成功地发挥效力，需要三名主体的配合：AI模型，工具，以及连接他俩的应用程序。
@@ -96,10 +99,11 @@ categories: 杂
 AI模型需要像人一样仔细阅读工具的使用说明书，并按照说明书填写给工具的请求单。而应用程序就像项目经理，负责把请求单、说明书、回执单在AI模型和工具之间传递，并会监督整个过程。
 
 以上就是MCP实现的机制。
-```
 
-```
-// Version 2
+---
+
+**——Version 2——**
+
 我们常用AI，感觉它像个无所不知的朋友，但又好像被关在“小黑屋”里——它会聊天，却没法帮你点外卖、分析Excel表格。
 
 怎么才能让它走出小黑屋，指挥其他软件干活呢？答案是一套高效的“沟通协议”。我们可以把它想象成一个职场法则，里面有三个角色：
@@ -127,5 +131,4 @@ AI模型需要像人一样仔细阅读工具的使用说明书，并按照说明
 这个让AI学会“摇人”干活的沟通法则，其技术名称就叫**模型上下文协议（Model Context Protocol, MCP）**。
 
 正是它，让AI未来能调用计算器、搜索引擎、订票软件……真正成为能深入我们生活和工作的超级助理。
-```
 
