--- a/source/_posts/技能训练/写作是门艺术-第二篇.md
+++ b/source/_posts/技能训练/写作是门艺术-第二篇.md
@@ -45,3 +45,34 @@ categories: 杂
 
 ## **练习·电影·阅读**
 
+> 1.辩论。官话该模糊还是精确？奥威尔在《政治与英语》中，批评英语已经进入腐朽：“作者或是词不达意，或是语焉不详，或是信手写来，根本不在乎其个中含义。语义含混、词不达意是现代英文写作中的两大显著特征。而在政论文写作中，这些特征表现得尤为突出。”
+>
+> 然而有人指出，官话的“模糊”是有意为之，或者不得已而为之。因为政府面临着非常多样化的利益诉求，需要维持各类微妙的平衡。你的想法是什么？政府文体应当采取什么样的风格？如果你是政府官员，你是要写清澈见底的文字，还是云山雾罩的文字？为什么
+
+“官话”精准不了，其作用是从更高的视角提纲挈领地提供“指导”，一旦具体了就会造成更大可能性的错误。就好比，他们只能说“好好学习”，但具体怎么学是不能说的，说了大概率会错的，毕竟每个人的学习风格不一样。
+
+如果我是政府官员，如果我的文字给老百姓看，就应该尽量的清澈见底；如果给政府内部看，那用些行内话也未尝不可。
+
+不过我没有参与过政治，很多事情了解不多。上述见解着实片面，理应对官话有更进一步的分类与讨论。
+
+> 2.辩论。中国自古以来就说“文如其人”，甚至还有“字如其人”的说法。英语中也有“You are what you write”的说法。然而，这也许是另外一种“以貌取人”，因为相反的例子不胜枚举，例如北宋奸臣蔡京写得一手好字。文字如同一层面纱、一个面具，也会遮盖了真实的人性。对此，你怎么看？为什么？
+
+- 具有相关性
+- 间接的因果性
+- 但不存在必然性，只有较大程度的概率
+
+> 3.短篇写作。介绍专业：假设有人跟你咨询高考填报志愿，请介绍你自己的专业。这类跟外行的沟通能力非常重要，你毕业后会用得更多。请注意：(1)不要搞概念轰炸，例如不要跟一个没学过经济学的人讲“交易成本”，多举例而且是生活中的例子；(2)不要随意根据自己的理解写，要么跟专家谈谈，要么查查资料；(3)克制情绪，不管你是超级喜欢还是极端厌恶自己的专业，都请尽量客观。类似的练习还包括：把一篇论文讲给一个外行听。
+
+讲一篇论文：[CDRT-RRT*: Real-time rapidly exploring Random Tree Star based on convex dissection](https://www.sciencedirect.com/science/article/pii/S0957417424031580?via%3Dihub)
+
+> 4.主题写作。从本章开始，咱们要以“家”为主题开启一场写作之旅。在写作的不同阶段，我会安排不同的任务。本次任务是：请用300字界定一下家的含义。说理写作通常首先要划定话题讨论的范围、提供清晰的定义，以确保作者、读者所谈的是同一件事情。概念界定方法，可参见加里·戈茨的书。[插图]你的定义可以不必追求完美，可以聚焦于家的一个侧面（例如物理空间、经济功能、儿童养育、夫妻关系等）。你可以选择一些有趣的角度，例如“家”字从古至今的变化。界定的目的即限制范围，以降低讨论的难度和工作量。包罗万象的讨论根本无法进行。
+
+> 5.翻出自己以前写的文字，看看你属于哪一种：A.官腔　B.学术腔　C.翻译腔　D.学生腔　E.完美无缺
+
+D B
+
+> 7.针对官腔、学术腔、学生腔，每类腔调找两个例子。8.统计一下你的段落行数、字数以及句子的平均长度。
+
+> 9.读到难读的文字时，请注意收集并分析为什么这些文字难读。
+
+> 10.收集你读过的最顺畅、最易理解的文字，并分析为什么这些文字好读。
