--- a/source/_posts/周报/【24】12.23-12.29.md
+++ b/source/_posts/周报/【24】12.23-12.29.md
@@ -159,7 +159,7 @@ orchestrator-workers 有用的示例：
 
 编码智能体的高级流程：
 
-![img](【24】12.23-12.29/imageurl=https%3A%2F%2Fwww-cdn.anthropic.com%2Fimages%2F4zrzovbb%2Fwebsite%2F4b9a1f4eb63d5962a6e1746ac26bbc857cf3474f-2400x1666.webp)
+![图片](【24】12.23-12.29/641.webp)
 
 ### 组合和定制这些模式
 
