--- a/source/_posts/周报/【25】八月.md
+++ b/source/_posts/周报/【25】八月.md
@@ -12,14 +12,27 @@ categories: 时流
 
 ### London
 
-- [ ] Cambridge Science Park
+> https://gemini.google.com/app/f5a3c38c0978e231
+
+- [ ] Cambridge Science Park——Lakeside Café
 - [ ] St John's Innovation Centre
 - [ ] Judge Business School - pitch
+- [ ] Trumpington Street主校区 (包括Baker Building, Inglis Building及James Dyson Building) 
 - [ ] Library
 - [ ] Bookstores
   - [ ] water stone
 
 - [ ] `Eventbrite` / `Meetup`
+
+- [ ] The Eagle Pub, Bene't Street 
+
+
+
+- [ ] 大英图书馆，商业与知识产权中心 (British Library, Business & IP Centre - BIPC) Sunday  11 am–5 pm
+- [ ] 弗朗西斯·克里克研究所 (The Francis Crick Institute) 与 惠康收藏馆 (Wellcome Collection)。
+- [ ] https://mastodon.social/@alice
+
+
 
 ### SKILL
 
@@ -35,8 +48,31 @@ categories: 时流
 
 《可能性的艺术》
 
+[How to Learn ANY Topic Faster with AI](https://www.youtube.com/watch?v=n4T5X9Cu-G4)
+
+### 纪录片-费马大定理
+
+英国数学家安德鲁·怀尔斯，十岁在一本书上看到了费马大定理，从此开启解密的一生。怀尔斯来到剑桥大学研究elliptic curves，但他还不知道在东京大学，已经有人把 elliptic curves 和 费马大定理联系在了一起。Taniyama-Shimura：椭圆曲线（代数几何的对象）和模形式（某种数论中用到的周期性全纯函数）之间的重要联系。如果费马大定理错了，那么就会存在一个违背Taniyama-Shimura的椭圆曲线；联系从此建立，因此接下来最关键的就是证明Taniyama-Shimura。
+
+walking along the river，让大脑放松，让注意力从工作中解放，但事实上，潜意识仍在思考问题。
+
+- hypotenuse
+- rigorous proof
+- elliptic curves
+- mudular function
+- symposium
+- 
+
 ## 展望
 
 九月着重训练的技能是：**说话**
 
 学习数目：《蔡康永的说话之道》，仅仅看过一遍，但需要可以练习。
+
+
+
+
+
+---
+
+Writing故意打低分，为了赚更多钱。
