--- a/source/_posts/周报/【25】八月.md
+++ b/source/_posts/周报/【25】八月.md
@@ -61,7 +61,10 @@ walking along the river，让大脑放松，让注意力从工作中解放，但
 - elliptic curves
 - mudular function
 - symposium
-- 
+
+## 输入
+
+> 指导AI做一个自我意识模拟agent，通过持续输出“思考日志”作为内部思维链，类似二次深度思考，并自己决策“语言输出”和“行动”作为表面呈现给用户的动态意识体。
 
 ## 展望
 
