--- a/source/_posts/周期.md
+++ b/source/_posts/周期.md
@@ -183,3 +183,10 @@ categories: 杂
 
 - **人性的共通性**：无论在哪个时代，人性中的某些基本要素（比如对安全的渴望、对意义的追求、代际之间的矛盾）是相对稳定的。这些共通的人性，在相似的社会条件下，确实会倾向于产生相似的结果。
 - **规律的“自证预言”**：当足够多的人相信某种周期存在时，他们可能会在无意中促成这个周期的实现。比如，如果大家普遍认为社会即将进入“危机期”，这种恐慌情绪本身就可能加速危机的到来。
+
+---
+
+- [Gemini](https://gemini.google.com/app/e64b69d6b4e03db1)
+- [docs](https://docs.google.com/document/d/1WCFqjL90Z_1ucT_l5QgfQZGvVhl_u7LLeICiWNxYWZU)
+- [2050@2025](https://untymen.com/2025/04/27/d03f3f205121/)
+
