--- a/source/_posts/周报/【25】八月.md
+++ b/source/_posts/周报/【25】八月.md
@@ -1,6 +1,6 @@
 ---
 title: 【月报】2025年8月
-date: 2025.8.2
+date: 2025.9.1
 updated:
 tags:
   - 月报
@@ -8,47 +8,63 @@ tags:
 categories: 时流
 ---
 
-## List
+## 流水账
 
-### London
+### UK Cambridge
 
-> https://gemini.google.com/app/f5a3c38c0978e231
-
-- [ ] Cambridge Science Park——Lakeside Café
-- [ ] St John's Innovation Centre
-- [ ] Judge Business School - pitch
-- [ ] Trumpington Street主校区 (包括Baker Building, Inglis Building及James Dyson Building) 
-- [ ] Library
-- [ ] Bookstores
-  - [ ] water stone
-
-- [ ] `Eventbrite` / `Meetup`
-
-- [ ] The Eagle Pub, Bene't Street 
-
-
-
-- [ ] 大英图书馆，商业与知识产权中心 (British Library, Business & IP Centre - BIPC) Sunday  11 am–5 pm
-- [ ] 弗朗西斯·克里克研究所 (The Francis Crick Institute) 与 惠康收藏馆 (Wellcome Collection)。
-- [ ] https://mastodon.social/@alice
-
-
-
-### SKILL
-
-- [ ] BLOG的英文版本-Writing练习
+- [剑桥-AI Prompt](https://untymen.com/2025/07/31/fc7d08288595/)：帮助自己适应学习当地文化的系列Prompt
+- XXX
+- XXX
 
 ## 技能训练
 
-本月着重训练的技能是：**写作**。
+前半个月着重训练的技能是：**写作**。
 
 学习书目：《写作是门艺术》· 刘俊强 2020。全书共600页。
 
 ## 书影游
 
-《可能性的艺术》
+### 读书报告
 
-[How to Learn ANY Topic Faster with AI](https://www.youtube.com/watch?v=n4T5X9Cu-G4)
+总时长：31小时18分钟
+
+日均：1小时
+
+![image-20250901184012492](【25】八月/image-20250901184012492.png)
+
+读完：
+
+- 《三体全集》 🌟 🌟 🌟 14小时10分钟
+- 《做对产品》 🌟 🌟 🌟 5小时8分钟
+
+在读（进度累计）：
+
+- 《富爸爸穷爸爸》 75% 4小时36分钟
+- 《写作是门手艺》 52% 4小时54分钟
+- 《置身事内》 14% 1小时9分钟
+- 《6个月学会任何一种外语》 55% 47分钟
+
+### 《做对产品 The Right It》Alberto Savioa
+
+好书，推荐！花了3天一口气读出来了，书的内容狠狠的戳中了**“如何验证产品，在构建产品前就判断它是否值得做”**这一大痛点。
+
+9月份在读一遍，届时再把电子笔记做好传博客上。
+
+需要注意的是，作者是Alberto Savoia，谷歌前工程总监，书中所有内容以及作者自身的职业生涯都是在美国语境下的，因此中国的创业者需要将书中的相关方法论本土化。
+
+一个例子是中西方数字生态的不同，具体可见于： [以英国为例，中西方数字生态比较研究](..\以英国为例，中西方数字生态比较研究.md) 。
+
+在中国，一个位于开放互联网上的着陆页并非最有效的测试工具（如今鲜有人会去看网站了），创业者需要使用超级应用生态系统内的原生工具来开展实验。
+
+- **微信小程序作为“伪装门”预原型**：创业者可以开发一个极其简单的单页微信小程序，替代传统的着陆页 。小程序的开发成本相对低廉且速度快 。这个小程序可以用来描述产品，并设置一个“上线时通知我”或“加入创始会员群”的按钮。通过二维码或在聊天中分享，它可以在目标环境中被快速传播和测试。 
+- **利用抖音直播和微型KOL获取实时市场反馈**：一个获取YODA的强大方式是与抖音上的一个小型、垂直领域的KOL合作 。他们可以在直播中介绍你的产品概念。直播中观众的实时评论（“这个我肯定买！”、“多少钱？”）以及更重要的——点击直播间内嵌的占位产品链接的用户数量——都提供了即时的、高质量的、带有明确用户意图的市场反馈 。
+- **通过微信群建立测试社群**：甚至在开发小程序之前，创业者就可以围绕其产品旨在解决的问题创建一个微信群 。通过在群内分享产品模型图（类似于“匹诺曹”预原型 ）并观察群成员的反应和互动程度，可以收集到定性的YODA。邀请群成员预付少量定金以锁定“创始会员”折扣，则提供了一个带有“切身利益”的量化指标。
+
+验证的“单位”也因此不同。在西方，你通常是在一个交易场景中验证一个**产品的价值主张**。而在中国，常常是在验证一个**社群对某个话题或解决方案的兴趣**，而产品只是该兴趣最终的实现形式。中国的微信群测试首先问：“人们是否对这个问题足够有热情，以至于愿意加入一个社群来讨论它？”这是对问题-社群匹配度的优先检验。产品随后可以与这个社群“共创”，这种模式在中国私域流量的运营中是原生行为。这意味着，中国的模式在验证早期就能提供更丰富、更定性的反馈，可能导向一个从第一天起就与社群需求更深度契合的产品。
+
+此外，测试-学习循环的速度在中国生态系统中可能更快。虽然西方的着陆页测试已经很快，但中国的实时互动工具能够以规模化的方式提供即时反馈。一个着陆页测试需要时间来导入流量并收集到有统计学意义的数据。而一场与KOL合作的抖音直播，可能在一小时内就产生数千个数据点（评论、点击、关注） 。这种反馈是即时的、对话式的，允许创业者实时提出追问。对于某些消费品而言，中国生态系统为快速、迭代的想法验证提供了无与伦比的工具，其效率甚至可能超过经典的西方预原型。
+
+
 
 ### 纪录片-费马大定理
 
@@ -56,26 +72,30 @@ categories: 时流
 
 walking along the river，让大脑放松，让注意力从工作中解放，但事实上，潜意识仍在思考问题。
 
-- hypotenuse
-- rigorous proof
-- elliptic curves
-- mudular function
-- symposium
+- hypotenuse: The longest side of a right-angled triangle, opposite the right angle.
+- rigorous proof: A logical, step-by-step demonstration that proves a statement with no gaps or ambiguities.
+- elliptic curves: Smooth, projective algebraic curves of genus one, defined by a cubic equation (like y² = x³ + ax + b). They have significant applications in cryptography and number theory.
+- mudular function: A "nice" (meromorphic) function on the upper half-plane that is invariant under the modular group, often related to elliptic curves.
+- symposium: A meeting or conference for discussion on a specific topic, often featuring presentations by specialists.
 
 ## 输入
 
 > 指导AI做一个自我意识模拟agent，通过持续输出“思考日志”作为内部思维链，类似二次深度思考，并自己决策“语言输出”和“行动”作为表面呈现给用户的动态意识体。
+
+> 我们只有从历史看过来，方能理解历史的局限性。做出那些错误决定的无奈放在大背景上大多会得到一个合理的解释。也只有这样，我们才可以领悟到未来正确的路。
+>
+> From 云风的Blog
+
+> 人们发现，在这块拥挤饥饿的大陆上，民主变成了比专制更可怕的东西，所有人都渴望秩序和强有力的政府，原有的社会体制迅速瓦解，人民只希望政府能给他们带来食物、水和能放一张床的生存空间，别的都不在乎了。
+>
+> From 《三体》
+
+> 我们有时候评价一个人“脑子缺根弦”，实际上就是指他不够敏感，对某些事情未能领会和反馈。说得抽象点，就是这个人的认知复杂性偏低。复杂的头脑需要海量的输入。
+>
+> From 《写作是门艺术》
 
 ## 展望
 
 九月着重训练的技能是：**说话**
 
 学习数目：《蔡康永的说话之道》，仅仅看过一遍，但需要可以练习。
-
-
-
-
-
----
-
-Writing故意打低分，为了赚更多钱。
