--- a/source/_posts/技能训练/写作是门艺术-第三篇.md
+++ b/source/_posts/技能训练/写作是门艺术-第三篇.md
@@ -44,7 +44,9 @@ categories: 杂
 
     - 第一个选择是：如何选择恰当的层次？你没法研究宏观的大问题，因为它们像议题一样难以驾驭；你也不能选择个人身上的问题，如果它没有代表性，就会显得过于琐碎自恋，没人感兴趣。
 
-      你最好能选择一个中间层面，既能限制范围，又能吸引相当数量的关注者。例如，你可以把个人遭遇的问题向上提升：·不被需要的人—××大学生的就业难问题[插图]·一再错过的约会—城市白领群体的婚嫁难问题
+      你最好能选择一个中间层面，既能限制范围，又能吸引相当数量的关注者。例如，你可以把个人遭遇的问题向上提升：·不被需要的人—××大学生的就业难问题·一再错过的约会—城市白领群体的婚嫁难问题。
+
+      > 从一个主题出发，增加背景，关注于某些变量和背景，投入到具体的实践场景中分析，对比
 
     - 第二个选择是：如何为它们增加一个问号？这就涉及疑问和现实难题的区别了。**疑问最接近咱们所称的研究类问题**。疑问更加聚焦，令人心里产生问号。
 
@@ -90,6 +92,8 @@ categories: 杂
     - 多个阶段，择其一二
     - 多个类型，择其一二
   - 对于写作和研究，我们更关注的是“片面而深刻”而不是“全面而肤浅”。
+  
+- > Focused, Significant, Researchable, Feasible, Clear, Specific, Aligned
 
 ### **第8章 中阶：谜题是文章的救星**
 
@@ -126,7 +130,6 @@ categories: 杂
 - “有的……有的”句型
 
   - “有的……有的……”句型实际上是把前文所提到的哪里、谁、什么时候这三个问号给具体化了
-
 
 ### **第9章 进阶：变量是思考的支点**
 
@@ -201,12 +204,9 @@ categories: 杂
 - 四种写作方式
 
   - 片面而肤浅的，我称为“聊胜于无式写作”；
-
-    片面而深刻的出自“专家之手”；
-
-    全面而肤浅的则是“大饼式写作”；
-
-    全面而深刻的，则出自“上帝之手”。
+- 片面而深刻的出自“专家之手”；
+  - 全面而肤浅的则是“大饼式写作”；
+- 全面而深刻的，则出自“上帝之手”。
 
 > 我的导师曾经对我说过：不要出去寻找应用和新方向，他们会随着你研究的深入很自然地向你靠拢。
 
