--- a/source/_posts/书单合集.md
+++ b/source/_posts/书单合集.md
@@ -7,6 +7,18 @@ tags:
 categories: 杂
 ---
 
+## 经典区
+
+
+
+## 创业区
+
+> [如果你15到25岁想创业：这30本书值得陪你走过最关键的几年-董科含](https://mp.weixin.qq.com/s/OSPZM4deIV7bF9Fko8ALmA)
+
+- 《做对产品(The Right lt)》Alberto Savoia
+
+  教你如何预验证创意，在构建产品前判断它是否值得做
+
 ## 三无区
 
 未整理，未阅读，未归类。不一定推荐，不一定是好书
