--- a/source/_posts/周报/【25】八月.md
+++ b/source/_posts/周报/【25】八月.md
@@ -10,11 +10,59 @@ categories: 时流
 
 ## 流水账
 
+- 27%未标记
+- 31%休息：224.25小时
+- 12%日常：89.25小时
+- 10%工作：77.5小时
+- 9.95%娱乐：74小时
+- 4.00%学习：29.75小时
+- 2.79%其他不得不做的事：20.75小时
+- 2.86%阅读：21.25小时（根据微信读书的数据，显示是少记了……还有不少碎片化阅读时间）
+- 0.60%兴趣：4.5小时
+- 0.08%运动：0.5小时
+
+### 工作方面（77.5H）
+
+排在前几位的是：
+
+- 16小时30分钟：其他
+- 15小时15分钟：剑桥访学
+- 14小时15分钟：公管大赛
+- 9小时45分钟：交流
+- 7小时45分钟：Linux智慧屏项目
+
+因为剑桥访学有好一些活要干，再加上别的杂七杂八的学校里的或者别的机构的事情，造成了“其他”的时间很长。
+
+中规中矩，把许多本应该拿来学习的时间放在了“工作”上。之所以没有把“Linux智慧屏项目”归类为“学习”，是因为这个更像是一些技能的模仿与复刻，从而形成经验；而不是类似于学习数学的输入思考输出。
+
+### 休息方面（230.75小时）
+
+> 7.31 - 8.28（粗糙统计）:
+>
+> 7.5/8.25/7/7.25/7.5/7/8/7/7.75/6.75/8.25/9.5/5/6.75/5.25/8/5.25/10.25/6.5/5.25/6.75/7.25/6.75/8/9.75/6/6.25/6.75/11.5
+
+虽然说，平均每天睡7小时27分钟，但是
+
+- 标准差$1.48$小时，最少睡$5$小时，最多睡$11.5$小时：经常在工作日“欠下睡眠债”，然后在周末或休息日进行“报复性补觉”。
+- 喜欢晚睡晚起，但是国医大师-蔡医生曾说过：“从中医角度看，最好是早起，熬夜的危害比早起大很多，因为前半夜是身体用来恢复的。”
+
 ### UK Cambridge
 
 - [剑桥-AI Prompt](https://untymen.com/2025/07/31/fc7d08288595/)：帮助自己适应学习当地文化的系列Prompt
-- XXX
-- XXX
+- [剑桥-记录-2](https://untymen.com/2025/08/15/1ee5d3198e0d/)：一些活动汇总
+- [剑桥-记录-1](https://untymen.com/2025/07/31/fd011ab19699/)：一点碎碎念
+
+### 文章更新
+
+- [《写作是门手艺》-第一篇](https://untymen.com/2025/08/02/76ddf81d70e0/)
+- [《写作是门手艺》-第二篇](https://untymen.com/2025/08/03/74c52a3bf1f8/)
+- [《写作是门手艺》-第三篇](https://untymen.com/2025/08/05/d0f244415ff7/)
+- [《写作是门手艺》-第四篇](https://untymen.com/2025/08/08/f858deda8361/)
+- [《写作是门手艺》-第五篇](https://untymen.com/2025/08/15/11de702aca03/)
+- [理工科笔记-解惑篇（AI）](https://untymen.com/2025/08/04/b09cef0c0b7a/)
+- [周期](https://untymen.com/2025/08/10/ddca9a7682c9/)
+- [MBTI](https://untymen.com/2025/08/12/fc9556fda9c1/)
+- [以英国为例，中西方数字生态比较研究(未完)](https://untymen.com/2025/08/28/dadd16ce9ff8/)
 
 ## 技能训练
 
@@ -46,7 +94,7 @@ categories: 时流
 
 ### 《做对产品 The Right It》Alberto Savioa
 
-好书，推荐！花了3天一口气读出来了，书的内容狠狠的戳中了**“如何验证产品，在构建产品前就判断它是否值得做”**这一大痛点。
+好书，推荐！花了3天一口气读出来了，书的内容狠狠的戳中了**“如何验证产品，在构建产品前就判断它是否值得做”**这一大痛点，并给出了一系列体系化的可操作的脚手架。
 
 9月份在读一遍，届时再把电子笔记做好传博客上。
 
@@ -78,6 +126,32 @@ walking along the river，让大脑放松，让注意力从工作中解放，但
 - mudular function: A "nice" (meromorphic) function on the upper half-plane that is invariant under the modular group, often related to elliptic curves.
 - symposium: A meeting or conference for discussion on a specific topic, often featuring presentations by specialists.
 
+### 电影
+
+- 马戏之王
+
+  一部音乐剧，节奏明快、情绪饱满、视听冲击力强的同时，剧情单薄且流水化、人物脸谱化。不过个人本来就喜欢听歌，就当成一场老百老汇风格的MV合集还是很不错的。
+
+  - 叙事的简化：所有的困难和危机，几乎都能用一首歌的时间解决。创业、火灾、破产、和解……过程被极度简化，只剩下情绪的爆发。
+  - 人物的扁平化：除了Barnum，其他角色（妻子、伙伴、怪人团成员）都像是功能性的符号，缺乏深入的内心刻画。
+
+  巴纳姆的梦想是“给人们带来快乐”，还是满足自己“被社会认可”的虚荣心？他追求“歌剧女伶”珍妮·林德，是真的欣赏艺术，还是因为她能帮自己敲开上流社会的大门？
+
+  歌曲清单：
+
+  - "This Is Me"：当 P.T. Barnum 为了讨好上流社会而将马戏团的“怪人”们拒之门外时，怪人们的反抗意识与自尊心瞬间爆发，不再为自己的“与众不同”而感到羞耻。
+  - "The Greatest Show"：这首歌是电影的开场和闭幕曲，定义了电影的基调——华丽、宏大、充满能量和奇观。
+  - "A Million Dreams"：主角的核心动机和爱情故事的起点，核心是关于梦想和承诺。
+  - "Rewrite the Stars"：Phillip Carlyle 和 Anne Wheeler 因为爱情渴望的内力走在一起，又因为阶级的外力彼此排斥。
+  - "Never Enough"：P.T. Barnum 被名利场迷惑的，欲望永远无法满足。
+  - "From Now On"：进入剧情的后半段，P.T. Barnum完成自我救赎、回归初心。
+
+- 想去香港看鬼灭/(ㄒoㄒ)/~~
+
+### 播客-老罗
+
+“**罗永浩的十字路口**”！！！听完了与李想、小鹏的两期，长时间、质量超高，能相对体系化的了解到两位企业家、创业家的经历、想法……
+
 ## 输入
 
 > 指导AI做一个自我意识模拟agent，通过持续输出“思考日志”作为内部思维链，类似二次深度思考，并自己决策“语言输出”和“行动”作为表面呈现给用户的动态意识体。
@@ -94,8 +168,64 @@ walking along the river，让大脑放松，让注意力从工作中解放，但
 >
 > From 《写作是门艺术》
 
+> 一想到以后我看待一切的目光都会因为那一点儿疼痛而变得了无生气，我就怕了。
+>
+> From 《恋爱的犀牛》
+
+> 中西方的经济学不同，这种不同不是知识性的。而是底层的价值观不一样，导致的方法论不一样。故而面对相同场景时，做出的价值判断和价值选择不同。
+>
+> From 发烧老师
+
+## 优秀产品
+
+新开一个板块，后续扩展成优秀项目/文章/博客，目前做不到一周一更，那就先坚持一月一更。
+
+- https://tidycal.com/
+
+  个人在线预约前台。它让别人可以轻松地看到您什么时候有空，并直接在您的日历上预订一个会议或活动，而无需来回发送邮件或消息确认时间。
+
+- [You do not need “analytics” for your blog because you are neither a military surveillance unit nor a commodity trading company – This day’s portion](https://www.thisdaysportion.com/posts/contra-analytics/)
+
+  - 应该抵制将个人网站也数据化和商品化的冲动。
+  - 倡导建立更小、更封闭、沟通更有意识的社区网络，用**主动的通知**代替**自动化的监控**。
+  - 你永远不应该，也不需要知道关于你网站和读者的所有信息。接受这种“未知”是一种更健康、更人性的选择。
+
 ## 展望
 
-九月着重训练的技能是：**说话**
+- 九月着重训练的技能是：**说话**
 
-学习数目：《蔡康永的说话之道》，仅仅看过一遍，但需要可以练习。
+  学习书目：《蔡康永的说话之道》，仅仅看过一遍，但需要可以练习。
+
+- 时间记录：
+
+  存在27%的空窗，再考量睡觉这种时间是跨天记录的，试一下每天晚上用Excel记录BlockyTime上面的时间。
+
+  同时，每天也有意识的，建立起时间与具体事件的联络，如“1小时-XX主题浅研究”，方便后续做AI的相关技术，帮我预测未来时间。
+
+- 未完待续：
+
+  - [以英国为例，中西方数字生态比较研究(未完)](https://untymen.com/2025/08/28/dadd16ce9ff8/)
+  - 《做对产品 The Right It》Alberto Savioa
+
+- 软件设计师-中级
+
+  - B站个人主页：https://space.bilibili.com/91286799 
+    2024年软件设计师学习路线：https://www.bilibili.com/read/cv18526892
+  - 也许可以开个专题：《软考备考之路：软件工程师中级》
+
+- 把一系列规划放到博客上
+
+- 具体时间上
+
+  - 软考：50H，10H/周
+  - 科研：每天一篇论文，1H/天
+  - 阅读：总计35H+
+  - 创业相关：50H，10H/周
+  - "项目"
+    - 机器人大赛
+    - Linux智慧屏
+    - ACM
+    - 数模
+
+  
+
