--- a/source/_posts/书单合集.md
+++ b/source/_posts/书单合集.md
@@ -11,6 +11,12 @@ categories: 杂
 
 
 
+## 小说区
+
+- 《天龙八部》
+
+
+
 ## 创业区
 
 > [如果你15到25岁想创业：这30本书值得陪你走过最关键的几年-董科含](https://mp.weixin.qq.com/s/OSPZM4deIV7bF9Fko8ALmA)
@@ -31,4 +37,12 @@ categories: 杂
 
   一本将编程教育、游戏历史和动手实践完美结合的优秀指南。它通过一种非常有趣的方式，让你不仅能学会用Python编程，还能亲身体验到创造游戏的乐趣，并深入了解游戏设计的黄金时代。
 
-- 
+- 《世界观》
+
+- 《智能简史》
+
+- 《爱因斯坦传》
+
+- 《一人公司：失业潮中的高新技术工作者（万相）》
+
+  > https://pan.quark.cn/s/872b0a1e0ae0#/list/share
