--- a/source/_posts/做对产品.md
+++ b/source/_posts/做对产品.md
@@ -50,256 +50,244 @@ You taught me a few lessons, now it's my turn.
 
 
 
-###  **第一部分 硬事实，任何新创意都有90%的失败率**
+###  第一部分 硬事实，任何新创意都有90%的失败率
+
+- 硬事实都具有如下三个维度的“硬度”： 
+  - 它们都让人很难接受，至少一开始很难。
+  - 它们是基于确定的、客观的数据，而不是苍白的期望、摇摆的信仰或者易变的主张。
+  - 它们是可靠的、坚固的、永久的，不大可能会发生变化，至少在很长一段时间里都不大可能会变。
 
 
+####  **01 市场失败律：失败是最可能的结果**
 
-- 硬事实都具有如下三个维度的“硬度”： ·　它们都让人很难接受，至少一开始很难。 ·　它们是基于确定的、客观的数据，而不是苍白的期望、摇摆的信仰或者易变的主张。 ·　它们是可靠的、坚固的、永久的，不大可能会发生变化，至少在很长一段时间里都不大可能会变
-
-
-
-###  **01 市场失败律：失败是最可能的结果**
-
-
-
-- 任何新产品创意 都有90%的失败率。 要想收获成功， 必须保证所有关键要素 都能够被正确地完成。
-
-
-
-###  **不准失败——不**
-
-
+> 任何新产品创意 都有90%的失败率。 要想收获成功， 必须保证所有关键要素 都能够被正确地完成。
 
 - 在商业世界里，失败非常普遍，初创企业多数会失败，老企业发布的新产品多数也会失败。
-- 失败是最可能出现的结果。
-
-
-
-###  **市场失败律：失败是任何新产品最可能的结果**
-
-
+- **市场失败律：失败是任何新产品最可能的结果**
 
 - 大多数新产品都将在市场上遭遇失败，即使所有的方案都被执行到位也不能避免。
-- 第一拳：大多数新产品都将在市场上遭遇失败。 第二拳：即使所有的方案都被执行到位也无法避免失败。
+  - 第一拳：大多数新产品都将在市场上遭遇失败。
+  - 第二拳：即使所有的方案都被执行到位也无法避免失败。
 
 
-
-###  **市场失败与市场成功**
-
-
-
-- 市场失败意味着投资的新产品在市场上取得了低于预期的甚至与预期相反的结果。
-- 如果你把一款产品推向市场，而市场反馈结果低于预期甚至与预期相反，我们就称之为市场失败。
 - 重要的是在评判一个产品成功与否之前，你要先明晰成功的标准。
+- 如果你把一款产品推向市场，而市场反馈结果低于预期甚至与预期相反，我们就称之为市场失败。
+
+> 市场失败：投资的新产品在市场上取得了低于预期甚至与预期相反的结果。
+>
+> 市场成功：投资的新产品在市场上取得了达到或超出预期的结果。
+
 - 这样一来，我们就对市场失败和市场成功进行了清晰、明确的定义，接下来让我们继续探索更多有关新产品失败的频率、方式，以及大多数新产品最终都会失败的原因
 
-
-
-###  **市场的真相：任何新创意都有90%的失败率**
-
-
-
+- **市场的真相：任何新创意都有90%的失败率**
 - 我还没有发现在哪个行业里大多数新产品都能获得持续的成功，这很合理，因为如果真有这样的行业，那就意味着这个行业或市场有着无尽的需求和资源，但这显然是不可能的。
 - 介绍这些产品的市场表现。结果竟然非常相似，接近80%的新产品的表现远低于预期，最终被归为“失败”“令人失望”“撤销”，年年如此，没有例外。
+- **正确的A×正确的B×……=成功**
 
+  正确的A×正确的B×正确的C×错误的D×正确的E×……=失败。
 
-
-###  **正确的A×正确的B×……=成功**
-
-
+  正确的A×错误的B×正确的C×正确的D×正确的E×……=失败。
 
 - 大多数结果和产出取决于多项关键要素之间的加成，要想收获成功，必须保证所有关键要素都能够被正确地完成。
-
-
-
-###  **聪明反被聪明误？**
-
-
 
 - 大多新产品都将在市场上遭遇失败，即使所有的方案都被执行到位也无法避免失败。”
 - 如果你还抱有幻想，以为具备某一领域或市场的经验与能力能够让你摆脱市场失败律，那么你不仅会失败，还会以一种更加惨烈和痛苦的方式失败，这或许是对你的傲慢的惩罚。
 - 尽管经验和能力对于一款能够满足市场所需的产品来说是实现持续成功所必需的要素，但对于一款市场不感兴趣的产品来说，它们就没什么用了。
 
+- 失败恐惧症是人类内心与追求成功和规避失败相关的最深层渴望，这正是许多成功企业难以维持创新的原因，即使他们的组织已经做好准备迎接失败也无济于事。
+
+  在公司层面，只要有一款真正成功的新产品就足以抵消数十次谷歌Wave那样的失败，比如Gmail，但对员工个人来说，失败的产品则只是在他们履历上增加了一条为失败产品工作若干年的记录
+
+- **命中注定的FLOP**
+
+  大多数项目都是因为启动、运营或前提而失败（**F**ailure due to **L**aunch, **O**perations, or **P**remise）。
+
+  - 因启动而失败
+
+    出现这种情况，通常是因为配合新产品开展的销售、市场或分销投入未能在目标市场达到所必需的曝光度或供货量。换句话说，对于本应该需要或想要你的产品与服务的那些人，即你的目标市场群体来说，其中很多人要么不知道你们的产品与服务的存在，要么知之甚少，要么就是想要却买不到。或许，你的产品实属史上最佳创意，也已顺利执行落地，还是能解决某个重大问题的完美方案，但**如果你无法让舆论或可用的产品触及你的目标市场，那么它就会失败**。
+
+  - 因运营而失败
+
+    出现这种情况，通常是因为你们的新产品的设计、功能或可靠性未能满足用户期望值的最低限度要求。例如，外观靓丽但坐着不舒服的椅子、菜品可口但服务差劲的餐馆
+
+    如果你没能将自己的创意实施到位，舆论关注终将消散，而失败则无可避免。
+
+  - 因前提而失败
+
+    通常是人们对你的创意不感兴趣，他们就是单纯地不喜欢而已。
 
 
-###  **与失败恐惧症相比，迎接与学习失败更重要**
-
-
-
-- 失败恐惧症是人类内心与追求成功和规避失败相关的最深层渴望，这正是许多成功企业难以维持创新的原因，即使他们的组织已经做好准备迎接失败也无济于事。在公司层面，只要有一款真正成功的新产品就足以抵消数十次谷歌Wave那样的失败，比如Gmail，但对员工个人来说，失败的产品则只是在他们履历上增加了一条为失败产品工作若干年的记录
-
-
-
-###  **命中注定的FLOP**
-
-
-
-- 大多数项目都是因为启动、运营或前提而失败（Failure due to Launch, Operations, or Premise）。
-- 因启动而失败
-- 出现这种情况，通常是因为配合新产品开展的销售、市场或分销投入未能在目标市场达到所必需的曝光度或供货量。换句话说，对于本应该需要或想要你的产品与服务的那些人，即你的目标市场群体来说，其中很多人要么不知道你们的产品与服务的存在，要么知之甚少，要么就是想要却买不到。或许，你的产品实属史上最佳创意，也已顺利执行落地，还是能解决某个重大问题的完美方案，但如果你无法让舆论或可用的产品触及你的目标市场，那么它就会失败。
-- 因运营而失败
-- 出现这种情况，通常是因为你们的新产品的设计、功能或可靠性未能满足用户期望值的最低限度要求。例如，外观靓丽但坐着不舒服的椅子、菜品可口但服务差劲的餐馆
-- 但如果你没能将自己的创意实施到位，舆论关注终将消散，而失败则无可避免。
-- 因前提而失败
-- 但是，他们就是单纯地不喜欢而已。
 - 说到底，我们非常漂亮地完成了产品设计和市场营销工作，但就是想要或需要这个产品的人不够多。
 - 一小部分产品在市场上的失败是因为没有做好产品启动或构建工作，而大部分产品的失败都是因为它们的产品创意有问题
 - 我总是把自己投入新产品的大多数时间和精力用于确保把它构建正确了，主要表现在稳健、高质量、可扩展等方面，接着再确保我们在营销方面做得正确。但因为我们从一开始就认定自己在构建正确的产品，结果多半是这个我们投入了非常多的时间、精力以及其他资源的产品后来被市场证明是“错误的它”。
 - 大多数新产品的失败不是因为人们缺乏设计、构建或营销的能力，而只是因为它们并非市场所需。我们把它构建正确了，但我们并没有构建“正确的它”——一款有足够多的人想要或需要、值得开发的产品。
-- 先确保你在构建“正确的它”，再确保你能把它构建正确。
+
+> 先确保你在构建“正确的它”，再确保你能把它构建正确。
 
 
 
-###  **02 先确保你在构建“正确的它”，再确保你能把它构建正确**
+####  **02 先确保你在构建“正确的它”，再确保你能把它构建正确**
 
+> 战胜市场失败律的唯一机会就是找到 “正确的它”的创意。 找到一个“正确的它”，配上执行到位，这个创意就能在市场上取得成功。
 
-
-- 战胜市场失败律的 唯一机会就是找到 “正确的它”的创意。 找到一个“正确的它”， 配上执行到位， 这个创意就能在市场上 取得成功。
 - “正确的它”就是一个创意，关乎一款只要执行到位就能在市场上取得成功的新产品创意。
 - 事实上，一个创意一旦被证明有市场，其他人马上就会意识到这个创意是“正确的它”，并一拥而上努力做到更好或者做到有特色。
 
-
-
-###  **“错误的它”是“正确的它”的邪恶双胞胎**
-
-
+> 正确的它（The Right It）是指如果执行到位，能够在市场上成功的一个新产品（或服务、公司、计划）创意。只有正确的它才能真正击败失败之兽。
 
 - 一个经验丰富又能干的团队，努力完成了新产品的开发和发行，结果却遭遇市场败局，发生这种情况意味着他们成了“错误的它”的受害者。他们的创意的基本前提（即FLOP中的“P”）已经脱离了市场的现实或者说人们的真实需求。
-- ·　为何很多经验丰富的人也会落入圈套，浪费经验和能力去执行“错误的它”？·　我们如何才能在对某个创意加大投入前判断出它是否是“正确的它”？
+- 两个关键问题
+  - 为何很多经验丰富的人也会落入圈套，浪费经验和能力去执行“错误的它”？
+  - 我们如何才能在对某个创意加大投入前判断出它是否是“正确的它”？
 
 
-
-###  **空想之地只能孵化失败的创意**
-
-
+- **空想之地只能孵化失败的创意**
 
 - 做过深度市场调研仍然失败的产品有很多，对它们进行“解剖”检查后，我从中发现了一个反复出现的问题模式：针对这些失败的产品所做的所谓的市场调研大多数都不是在真正的市场中进行的，而是在我称之为“空想之地”的一种虚构环境中进行的。
-- 空想之地：这是一个虚构的地方，新产品创意在这里四处游荡，收集人们经请求后提供的和主动提供的各种意见。你最好不要在空想之地长时间停留，发生在空想之地的事情就应该让它留在空想之地。
+
+> 空想之地：这是一个虚构的地方，新产品创意在这里四处游荡，收集人们经请求后提供的和主动提供的各种意见。你最好不要在空想之地长时间停留，发生在空想之地的事情就应该让它留在空想之地。
+
 - 针对创意的观点可不是数据，观点是主观的、有偏见的判断，它们都只是些缺乏思考、证据和严肃性的揣测，没有任何“切身利益”（skin in the game）。
-- 意见：关于一个创意成功前景的主观的、有偏见的而且通常毫无根据的判断。在寻求“正确的它”的过程中，意见根本就是危险且具有误导性的。
+
+> 意见：关于一个创意成功前景的主观的、有偏见的而且通常毫无根据的判断。在寻求“正确的它”的过程中，意见根本就是危险且具有误导性的。
+
 - 我们无法只通过思考就判断出一个创意是否是“正确的它”，靠你自己的思考做不到，靠别人的思考或观点也不行，靠所谓“专家”的思考也是一样。
 - 只要你还待在空想之地，就无法把“正确的它”给推导或诱导出来，你只能通过在真实世界中进行试验来把它发掘出来。
 
+- **空想之地的四大失败之怪**
+
+  - 翻译缺失问题
+
+    你所想象的新产品和它的使用方式，跟其他人听完你的介绍之后所想象的样子可能完全不同，这就是问题的根源。人们的信仰、偏好和偏见等这些思维模式方面的局限会扭曲他们对你的创意的理解。不仅人们对创意本身的理解会与你不同，他们还会依据自己独特的世界观来评判这个创意。
+  - 预测问题
+
+    对于那些尚未体验过的事物，人类很不擅长预测自己是否真的想要或喜欢它们，更不擅长预测自己会如何使用它们以及使用它们的频率。
+
+    > 作为一个物种，我们人类在预测自己是否会使用某个新产品或服务、如何使用以及使用频率等方面的表现非常差。
+  - 切身利益问题
+
+    > 切身利益（skin in the game）：是指市场给你的某种有价值的反馈，作为其确实对你的创意感兴趣的证据。切身利益最简单的形式是金钱，如预付款或订金，但也可能是人们的时间、信息、声誉等。
+  - 证实性偏差问题
+
+    证实性偏差这个术语指的是一种倾向，即人们会选择性地寻求有利证据而忽略不利信息，以此来支持自己已有的信念或观点。换句话说，我们通常做不到采用客观手段收集信息，也无法做到客观地看待所收集到的信息
 
 
-###  **空想之地的四大失败之怪**
+- 四大失败之怪的不良影响
+  - 首先，初始创意在翻译过程中被曲解。
+  - 接着，人们基于自己的独特经验和偏见来看待和评判已被扭曲的创意。
+  - 随后，与切身利益无关的观点被提出。
+  - 最终，那些以针对被扭曲创意的偏见判断为基础得出的无风险型观点被谨慎地选出和解读，以证实我们一直以来都想要相信的观点。
 
+> - 假阳性（false positives）：一项创意在空想之地听起来很棒，但若将其推向市场却有很大概率遭遇惨败的现象。大多数市场失败都是假阳性。
+>
+> - 假阴性（false negatives）：一项创意在空想之地毫无成功可能，但若推向市场却有很大概率能够取得成功的现象
 
-
-- ·　翻译缺失问题。·　预测问题。·　切身利益问题。·　证实性偏差问题
-- 你所想象的新产品和它的使用方式，跟其他人听完你的介绍之后所想象的样子可能完全不同，这就是问题的根源。人们的信仰、偏好和偏见等这些思维模式方面的局限会扭曲他们对你的创意的理解。不仅人们对创意本身的理解会与你不同，他们还会依据自己独特的世界观来评判这个创意。
-- 对于那些尚未体验过的事物，人类很不擅长预测自己是否真的想要或喜欢它们，更不擅长预测自己会如何使用它们以及使用它们的频率。
-- 作为一个物种，我们人类在预测自己是否会使用某个新产品或服务、如何使用以及使用频率等方面的表现非常差。
-- 切身利益（skin in the game）：是指市场给你的某种有价值的反馈，作为其确实对你的创意感兴趣的证据。切身利益最简单的形式是金钱，如预付款或订金，但也可能是人们的时间、信息、声誉等。
-- 证实性偏差这个术语指的是一种倾向，即人们会选择性地寻求有利证据而忽略不利信息，以此来支持自己已有的信念或观点。换句话说，我们通常做不到采用客观手段收集信息，也无法做到客观地看待所收集到的信息
-- ·　首先，初始创意在翻译过程中被曲解。·　接着，人们基于自己的独特经验和偏见来看待和评判已被扭曲的创意。·　随后，与切身利益无关的观点被提出。·　最终，那些以针对被扭曲创意的偏见判断为基础得出的无风险型观点被谨慎地选出和解读，以证实我们一直以来都想要相信的观点。
-
-
-
-###  **空想之地和假阳性**
-
-
-
-- 假阳性（false positives）：一项创意在空想之地听起来很棒，但若将其推向市场却有很大概率遭遇惨败的现象。大多数市场失败都是假阳性。
-
-
-
-###  **空想之地和假阴性**
-
-
-
-- 假阴性（false negatives）：一项创意在空想之地毫无成功可能，但若推向市场却有很大概率能够取得成功的现象
-
-
-
-###  **逃离空想之地**
-
-
-
-- ·　对市场失败律的无视加上空想之地的假阳性回应，将会导致你过度投资于一个注定失败的“错误的它”。·　对失败的恐惧加上空想之地的假阴性反馈，将会导致你停下步伐，不再跟进有潜力成为“正确的它”的创意——一个只要所有方案都被执行到位就注定成功的创意。
+- **市场失败率+空想之地**
+  - 对市场失败律的无视加上空想之地的假阳性回应，将会导致你过度投资于一个注定失败的“错误的它”。
+  - 对失败的恐惧加上空想之地的假阴性反馈，将会导致你停下步伐，不再跟进有潜力成为“正确的它”的创意——一个只要所有方案都被执行到位就注定成功的创意。
 
 
 
-###  **03 数据胜过事实，尤其是你自己的数据**
 
+####  **03 数据胜过事实，尤其是你自己的数据**
 
+- 你自己的数据就是 你自己的团队亲自收集的 用于验证创意的 第一手市场数据。 数据必须满足新鲜度、 强关联、可信度和统计学意义等标准。
 
-- 你自己的数据就是 你自己的团队亲自收集的 用于验证创意的 第一手市场数据。 数据必须满足新鲜度、 强关联、可信度和 统计学意义等标准。
-- 数据胜过意见：是想要提升一项创意的市场成功概率必须内化和实践的一条关键规则，没有例外。不要将产品建立在意见的基础上，而要将它们建立在市场数据的基础上，并且不是随便什么旧数据或他人的数据（见OPD），而是你自己的数据（见YODA）
-- 新鲜度：数据需要是新鲜的，越新鲜越好，因为几年、几个月或几个星期之前还算真实的数据，到今天可能就不再有指导意义了。
-- 强关联：数据必须直接适用于所评估的特定产品或决策。
-- 可信度：你在做决策时，不应该依赖由其他人、其他组织收集的数据，或是为其他项目收集的数据。
-- 统计学意义：数据必须具有统计学意义。它必须以足够大的样本量为基础，这样才能确保结论不是基于偶然的。
+> 数据胜过意见：是想要提升一项创意的市场成功概率必须内化和实践的一条关键规则，没有例外。不要将产品建立在意见的基础上，而要将它们建立在市场数据的基础上，并且不是随便什么旧数据或他人的数据（见OPD），而是你自己的数据（见YODA）
 
-
-
-###  **你不应该依赖他人的数据**
-
-
+- **数据的关键标准**
+  - 新鲜度：数据需要是新鲜的，越新鲜越好，因为几年、几个月或几个星期之前还算真实的数据，到今天可能就不再有指导意义了。
+  - 强关联：数据必须直接适用于所评估的特定产品或决策。
+  - 可信度：你在做决策时，不应该依赖由其他人、其他组织收集的数据，或是为其他项目收集的数据。
+  - 统计学意义：数据必须具有统计学意义。它必须以足够大的样本量为基础，这样才能确保结论不是基于偶然的。
 
 - 你不应该依赖“他人的数据”（OPD）来判断自己的创意有无可能取得市场成功。依赖于OPD是一条很诱人但也很危险的捷径。
-- 让我定义一下OPD的含义。OPD指的是由其他人，为其他项目，在其他时间、地点，用其他方法，出于其他目的所收集和编制的任何市场数据。我们刚刚讲到的新鲜度、强关联、可信度和统计学意义等标准，OPD违背了好几条
-- 每当你自认为有了一个关于业务、产品或服务的新创意时，都有如下5种可能的情形。·　场景1：你是世界上第一个想出这个创意的人，世界上没有任何其他东西跟它一样。其他人也有相同的或相似的创意，但是：·　场景2：他们选择不再推进。·　场景3：他们正在积极推进相似的创意，但还没有发布。·　场景4：他们推进了相似的创意，但却在发布后失败了。·　场景5：他们推进了相似的创意，并在发布后获得了成功。
-- 提出新创意很简单，推进它们需要付出努力、牺牲、切身利益以及更多。大多数人都有很多创意，但却没有付诸行动，你或许会因为他们的想法而更了解这些人，但却无法因此而更了解该创意取得成功的潜力
-- 他们可能是哪些方面没有执行好，也可能是他们的产品与你的创意有某些虽小但却颇重要的差异。如果那个创意是在别的时间、地点由别的人群推出的，结果就很可能并不适用于你的创意和目标市场
 
+- 让我定义一下OPD的含义。**OPD指的是由其他人，为其他项目，在其他时间、地点，用其他方法，出于其他目的所收集和编制的任何市场数据。我们刚刚讲到的新鲜度、强关联、可信度和统计学意义等标准，OPD违背了好几条。**
 
+- 每当你自认为有了一个关于业务、产品或服务的新创意时，都有如下5种可能的情形。
 
-###  **你必须获取你自己的数据**
+  - 场景1：你是世界上第一个想出这个创意的人，世界上没有任何其他东西跟它一样。
 
+    通常不可能，如果真的发生了，那就无需担心OPD，因为它根本不存在。
 
+  其他人也有相同的或相似的创意，但是：
 
-- YODA：你自己的团队亲自收集的用于验证创意的第一手市场数据。YODA必须与用户的切身利益相关。与OPD不同，对于评估你的创意来说，YODA即是充分条件也是必要条件
+  - 场景2：他们选择不再推进。
 
+    这个场景没有给我们提供任何可用的数据。提出新创意很简单，推进它们需要付出努力、牺牲、切身利益以及更多。大多数人都有很多创意，但却没有付诸行动，你或许会因为他们的想法而更了解这些人，但却无法因此而更了解该创意取得成功的潜力
 
+  - 场景3：他们正在积极推进相似的创意，但还没有发布。
 
-###  **04 思考工具，学会使用三大假说来澄清创意**
+    这个场景没有给我们提供任何可用的数据，因为除非你去监视这些正在推进相似创意的人，否则你无法知道他们的创意跟你的到底有多相似。
 
+  - 场景4：他们推进了相似的创意，但却在发布后失败了。
 
+    这个场景给我们提供了些数据，但仍不足以让我们据此做出决策。他们可能是哪些方面没有执行好，也可能是他们的产品与你的创意有某些虽小但却颇重要的差异。如果那个创意是在别的时间、地点由别的人群推出的，结果就很可能并不适用于你的创意和目标市场
 
-- 如果一个创意 没有市场， 那么它就不可能成功。
+  - 场景5：他们推进了相似的创意，并在发布后获得了成功。
 
+    此场景能够提供给我们可能有相关性的数据，但仍不足以让我们据此做出决策。仅仅因为其他人把某个创意做成了，并不意味着你用同样的创意就能成功。
 
+> YODA：你自己的团队亲自收集的用于验证创意的第一手市场数据。YODA必须与用户的切身利益相关。与OPD不同，对于评估你的创意来说，YODA即是充分条件也是必要条件。
 
-###  **市场参与假说，有市场就有办法**
+### 第二部分 检验创意的三大利器
 
+####  **04 思考工具，学会使用三大假说来澄清创意**
 
+> 没市场就没办法：如果市场对一个产品创意不感兴趣，那么不管这个产品的设计多么精湛、工程多么出色、可靠性多么卓越、营销手段多么花哨，都无法帮助这个创意取得成功。
+
+> 市场参与假说（MEH）：整合了新产品创意背后的**基本前提和目前市场与之互动方式**的高阶描述。例如，隔日寿司的市场参与假说是：很多偏好健康饮食的人们都很喜欢吃寿司，但因为寿司太昂贵，所以人们无法经常食用。如果我们能够找到办法让寿司跟其他快餐一样实惠，就会有很多常吃快餐的人放弃其他不太健康的食品而改选寿司。
+
+> 有市场就有机会：只要市场对一个产品创意足够感兴趣，人们通常都会找到办法冲破任何工程、财务、法务或其他方面的阻碍，使这一创意最终得以实现。只要创意是“正确的它”，通常它都能“找到”办法走向市场。
+
+- 市场参与假说：有市场就有办法
 
 - 一个创意若想在市场上取得成功，许多关键因素都必须依次做对。
+
 - 你的市场是什么？以及该如何定义和判断入场时机？对于这些问题，你需要百分之百地清楚。答案是市场参与假说
-- 没市场就没办法：如果市场对一个产品创意不感兴趣，那么不管这个产品的设计多么精湛、工程多么出色、可靠性多么卓越、营销手段多么花哨，都无法帮助这个创意取得成功。
+
 - 因为市场参与假说实在是太重要了，所以它不仅应该是清晰的，还应该是可验证和可用数字表达的，但我们也别做过了头。
-- 市场参与假说（MEH）：整合了新产品创意背后的基本前提和目前市场与之互动方式的高阶描述。例如，隔日寿司的市场参与假说是：很多偏好健康饮食的人们都很喜欢吃寿司，但因为寿司太昂贵，所以人们无法经常食用。如果我们能够找到办法让寿司跟其他快餐一样实惠，就会有很多常吃快餐的人放弃其他不太健康的食品而改选寿司。
+
 - 有市场就有机会：只要市场对一个产品创意足够感兴趣，人们通常都会找到办法冲破任何工程、财务、法务或其他方面的阻碍，使这一创意最终得以实现。只要创意是“正确的它”，通常它都能“找到”办法走向市场。
 
+- MEH举例
 
+  - 创意：廉价寿司，一辆廉价寿司食品车，0.99元金枪鱼卷之家。
 
-###  **用数字说话**
+    MEH：如果我们能把寿司做到跟其他快餐一样快捷、便宜，很多寿司爱好者就会选择寿司，而不是汉堡、墨西哥卷或其他不那么健康的快餐食品了。
 
+  - 创意：Webvan，日用品网上订购、送货到家。
 
+    MEH：如果可以选择，很多家庭都会选择在网上购买日用品，而不是去超市。
 
-- 用数字说话：在任何时候，能量化的信息就一定要量化。数字比一些模糊不清的术语更有意义也更有用，即使是有根据地猜测出的数字也一样。
+  - 创意：一部关于漫威卡通人物霍华德鸭的电影。
 
+    MEH：人们喜欢虚构的鸭子形象，比如唐老鸭、达菲鸭，所以人们会蜂拥而至来观看一部以霍华德鸭为主角的动画电影。
 
+  - 创意：奈飞公司（在流媒体出现之前，该公司最初的业务模式是以DVD租赁为基础的）。
 
-###  **XYZ假说，把含糊观点转化为可验证假说**
+    MEH：如果我们集合了DVD邮件递送、固定月租费和免滞纳金，那么很多人都会跟我们签约，而不是去商店租赁。
 
+>  用数字说话：在任何时候，能量化的信息就一定要量化。数字比一些模糊不清的术语更有意义也更有用，即使是有根据地猜测出的数字也一样。
 
+> XYZ假说：当你把“用数字说话”这一原则用于市场参与假说时所得到的东西。XYZ假说的基本格式是“至少X%的Y将会Z”，X%代表了你目标市场Y的一个百分比，Y是关于你的目标市场的一个清晰的描述，Z则代表了那部分市场将对你的新产品创意采取何种反应。
 
-- XYZ假说：当你把“用数字说话”这一原则用于市场参与假说时所得到的东西。XYZ假说的基本格式是“至少X%的Y将会Z”，X%代表了你目标市场Y的一个百分比，Z则代表了那部分市场将对你的新产品创意采取何种反应。
-- 在污染严重的城市中生活的一些人会有兴趣购买价格合理的设备用于监测和净化空气的。 哪些城市算是“污染严重的”？“会有兴趣”意味着什么？“价格合理”又是什么意思？
-- X%就是你的目标市场的一个具体百分比；Y是关于你的目标市场的一个清晰的描述；Z就是你预期市场会对你的创意采取何种反应
+- MEH：在污染严重的城市中生活的一些人会有兴趣购买价格合理的设备用于监测和净化空气的。 
+
+  那么：哪些城市算是“污染严重的”？“会有兴趣”意味着什么？“价格合理”又是什么意思？
+
 - 注意，X、Y、Z等初始值只是起点，是根据学生们心目中创意可行所必需的最小市场规模做出的猜测。10%是对市场的合理估计吗？超过100是正确的AQI数值吗？120美元是合理的价格吗？可能并不是。这些初始值或许会谬之千里，但至少学生们定义了他们对“一些人”“污染严重”“会有兴趣”“价格合理”这些内容的理解，他们可以通过进一步的验证来了解真实的市场是否如此。
-- X：我们能在目标市场占据多大地盘，即份额占比是多少？Y：我们的目标市场是什么？Z：目标市场将对我们的产品做何反应以及具体表现如何？
 
+- “XYZ”包含以下内容：
 
+  - X：我们能在目标市场占据多大地盘，即份额占比是多少？
+  - Y：我们的目标市场是什么？
+  - Z：目标市场将对我们的产品做何反应以及具体表现如何？
 
-###  **缩进假说，从Y到y**
-
-
+> 缩进假说：从范围、空间和时间角度不断缩进一个XYZ假说，直至衍生出一组较小的可以快速且低成本地进行本地化测试的xyz假说的过程。其中的一条原则是：如果XYZ假说为真，那么基于它衍生出来的易于测试的缩进版xyz假说也应该为真。
 
 - 想法是如果XYZ为真，则xyz必为真，但xyz更易于测试和验证。
-- 缩进假说：从范围、空间和时间角度不断缩进一个XYZ假说，直至衍生出一组较小的可以快速且低成本地进行本地化测试的xyz假说的过程。其中的一条原则是：如果XYZ假说为真，那么基于它衍生出来的易于测试的缩进版xyz假说也应该为真
 - 我建议你从完整市场Y走到一个更小的、可管理的、易于触达的初期测试市场y
 - xyz假说：从更宽泛的XYZ假说衍生出来并与之保持一致的一种小型的、特定的、易于快速测试的假说。以隔日寿司为例，一个合理的xyz假说是“如果价格只有普通盒装寿司的一半，在Coupa咖啡厅吃午饭的学生中至少有20%的人会选择隔日寿司”。从一个宽泛的XYZ假说推导出一个或多个xyz假说的过程即为缩进假说。
 - 从统计学上看，100到1 000这个数量区间应该是具有统计意义的，但是你得确保所选样本中的人群能代表你的目标市场，即真的可能会购买你的产品或服务的人群
