--- a/source/_posts/书单合集.md
+++ b/source/_posts/书单合集.md
@@ -46,3 +46,11 @@ categories: 杂
 - 《一人公司：失业潮中的高新技术工作者（万相）》
 
   > https://pan.quark.cn/s/872b0a1e0ae0#/list/share
+
+- 《10倍成长思维》
+  - 《10x Is Easier than 2x》
+
+- 《切蛋糕》
+
+
+
