docs: add 【翻译】谷歌 14 年，我学到的 21 条经验 content

--- a/source/_posts/周报/【25】十二月.md
+++ b/source/_posts/周报/【25】十二月.md
@@ -110,7 +110,53 @@ categories: 时流
     然后在再开始进入提问流程。
     ```
 
-  - 
+- > 天赋是在干的过程中被体现出来的，不是被发现的 如果你什么都不干，你就没有天赋 是没有天赋，而不是天赋没被发现，这有很大的区别。
+  >
+  > ---
+  >
+  > 太多人总是希望先想好一切， 布局好一切再开始行动了。
+  >
+  > ---
+  >
+  > **创业从不是冒险，是试错的次数够多。**
+  >
+  > ---
+  >
+  > **疯狂迭代**：不断的**输入+输出**，认知和行动力双修。 
+  >
+  > **圈子红利**：哪怕是学生，也混在中推这种高信息密度的圈子里，信息差被抹平了。 
+  >
+  > **野心与杠杆**：不甘心只做牛马，极早接触复利思维，极早用AI工具降低门槛。
+  >
+  > ---
+  >
+  > 长期都会“稀缺”的方向： 
+  >
+  > 第一，判断力。有了AI之后信息不值钱，方案也不值钱，但选哪一个，需要人定才行。能做正确决策的人永远稀缺。 
+  >
+  > 第二，信任感。人会为“这个人”买单，比如，你经历过什么、你做了什么、你为什么值得信，这东西AI没法建立。 
+  >
+  > 第三，整合能力。AI是工具，谁来定义问题、拆解任务、串起来形成结果，这还是人的活。
+  >
+  > ---
+  >
+  > - 哪些路，我一定不想走
+  > - 哪些纠结，只是“怕落后”的噪音
+  > - 哪些事，我愿意为它长期付出代价
+
+- 杭州一人公司Coffee Chat：
+
+  - 如何找到低成本创业赛道？
+
+    > 有个女孩问：如何找到低成本创业成长赛道，2位职场高管姐姐给出了她们的建议。
+    >
+    > **别迷信“绝对低成本创业”：**创业的成本不止金钱，还有时间、精力和机会成本，想有所收获，就必须有所付出。
+    >
+    > **专注投入是关键：**兼职做副业很难做成气候，创业需要百分百的投入；如果觉得一个人扛不住，可以找志同道合的伙伴分工协作，不管是金钱AA，还是出力出钱互补，明确分工才能走得远。
+    >
+    > **自媒体虽低门槛，但别忽视时间成本：**自媒体是很多女生的创业首选，门槛不高，但需要长期坚持，而且能不能出结果、出结果的时间都不确定，这些风险要提前评估。
+    >
+    > **先明确需求，再承担风险：**创业前先想清楚自己是为了赚钱、实现价值，还是追求自由？明确需求后，再评估自己能承受的风险，不盲目跟风，才是稳妥的选择。
 
 ## 资源
 
@@ -127,6 +173,19 @@ categories: 时流
 - [UI Prompt 汇总](https://www.uiprompt.site/zh/home)
 
 - [AI+具身智能硬件 —— Datawhale](https://www.datawhale.cn/activity/444/learn/258/5690)
+
+- [分享 GitHub 上有趣、入门级的开源项目](https://github.com/521xueweihan/HelloGitHub)
+
+  > 这里有实战项目、入门教程、黑科技、开源书籍、大厂开源项目等，涵盖多种编程语言 Python、Java、Go、C/C++、Swift…让你在短时间内感受到开源的魅力，爱上开源！
+
+- [从零开始学习计算机图形：免费且全面](https://www.scratchapixel.com/)
+
+  > Scratchapixel提供了一个免费的学习平台，让你从零开始掌握计算机图形学。这里不仅有详细的教程，还有即将出版的书籍，以及专门针对Vulkan API的课程。无论是初学者还是有一定基础的学习者，都能在这里找到适合自己的内容。
+  >
+  > "我们希望你能在没有互联网的荒岛上，依然能够通过这本书理解计算机图形学的精髓。"
+
+- [正则表达式30分钟入门](https://deerchao.cn/tutorials/regex/regex.htm)
+
 
 ## 产品/项目
 
